--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
   <div id="app">
-    <div class="game">
+    <div class="game" v-cloak>
 
       <header>
         <h1>Bulls and Cows</h1>
